# Subtitle-Generator

./: README.md  main.py  pyproject.toml  run.py
data/: sample.srt  sample_2.srt
generator/: __init__.py  generator.py
utils/: __init__.py  folder.py  input.py  model.py  time.py  video.py
