[project]
name = "subtitle_generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "openai-whisper>=20250625",
    "pysrt>=1.1.2",
    "torch",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true  # Prevents other packages from accidentally using this index

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
torchaudio = { index = "pytorch-cu132" }

