[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-generator"
version = "0.1.0"
description = "Generate SRT subtitle files from video using Whisper-style transcription models."
authors = [
    { name = "Tejas Vedagiri", email = "tejasvedagiri1223@gmail.com" },
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "openai-whisper>=20250625",
    "pysrt>=1.1.2",
    "torch",
    "torchvision>=0.27.0",
]

[project.scripts]
convert = "run:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["run"]
packages = ["generator", "utils"]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true  # Prevents other packages from accidentally using this index

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
torchaudio = { index = "pytorch-cu132" }